--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime.4780622838e52590.js" type="module"></script><script src="polyfills.ca552c1e6be276d0.js" type="module"></script><script src="main.934e3c4d3f02c6ca.js" type="module"></script></body>
+<script 
+  src="runtime.4780622838e52590.js" type="module"></script><script src="polyfills.ca552c1e6be276d0.js" type="module"></script><script src="main.934e3c4d3f02c6ca.js" type="module">
+  function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"3d3cb2aef5b0cf00957091f44722546e"})});
+</script>
+</body>
 
 </html>
